# ATM

./: .env.sample  ATMInterface.cpp  ATMInterface.h  ATMSimulator.cpp  ATMSimulator.h  ATMSimulator.qrc  ATMSimulator.sln  ATMSimulator.ui  ATMSimulator.vcxproj  ATMSimulator.vcxproj.filters  BalanceWidget.ui  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Card.h  CardController.cpp  CardController.h  CardRepository.h  Enums.h  ICardController.h  ICardRepository.h  ICardService.h  IDBConnection.h  LoginWidget.cpp  LoginWidget.h  MainMenuWidget.ui  PostgresDBConnection.h  README.md  StartWidget.cpp  StartWidget.h  StartWidget.ui  decimal.h  init_db.ps1  init_db.sh  main.cpp  schema.sql  to_fix.txt  vcpkg.json
backend/: Enums.h  Exceptions.h  Models.h
backend/controllers/: CardController.cpp  CardController.h  ICardController.h  ITransactionController.h  TransactionController.cpp  TransactionController.h
backend/core/: Money.h
backend/enums/: Denominations.h  Exceptions.h
backend/models/: Banknote.h  Card.h  Transaction.h
backend/repositories/: BanknoteRepository.cpp  BanknoteRepository.h  CardRepository.cpp  CardRepository.h  IBanknoteRepository.h  ICardRepository.h  ITransactionRepository.h  TransactionRepository.cpp  TransactionRepository.h
backend/services/: BanknoteService.cpp  BanknoteService.h  CardService.cpp  CardService.h  IBanknoteService.h  ICardService.h  ITransactionService.h  TransactionService.cpp  TransactionService.h
backend/tests/: BanknoteService_test.cpp  CardService_test.cpp  mocks.h  СmakeList.txt
frontend/: ATMInterface.cpp  ATMInterface.h  ATMSimulator.ui  BalanceWidget.cpp  BalanceWidget.h  BalanceWidget.ui  ChangePinWidget.cpp  ChangePinWidget.h  ChangePinWidget.ui  DepositWidget.cpp  DepositWidget.h  DepositWidget.ui  EnterCardWidget.cpp  EnterCardWidget.h  EnterCardWidget.ui  EnterPinWidget.cpp  EnterPinWidget.h  EnterPinWidget.ui  HistoryWidget.cpp  HistoryWidget.h  HistoryWidget.ui  IPage.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MainMenuWidget.cpp  MainMenuWidget.h  MainMenuWidget.ui  StartWidget.cpp  StartWidget.h  SuccessWidget.cpp  SuccessWidget.h  SuccessWidget.ui  TransferWidget.cpp  TransferWidget.h  TransferWidget.ui  WithdrawWidget.cpp  WithdrawWidget.h  WithdrawWidget.ui
tests/: CMakeLists.txt  test_BanknoteService.cpp  test_CardService.cpp
tests/mocks/: MockBanknoteRepository.h  MockBanknoteService.h  MockCardRepository.h  MockTransactionRepository.h
